--- a/ansible/roles/passenger_nginx/templates/foreman.conf.j2
+++ b/ansible/roles/passenger_nginx/templates/foreman.conf.j2
@@ -25,3 +25,44 @@ server {
         root              {{ passenger_nginx_passenger_app_root }};
     }
 }
+{% if passenger_nginx_ssl %}
+server {
+    listen       443 default_server;
+    server_name  {{ passenger_nginx_server_name }};
+
+    access_log  /var/log/nginx/ssl_foreman.access.log  main;
+    error_log   /var/log/nginx/ssl_foreman.error.log;
+
+    error_page  404              /404.html;
+    location = /404.html {
+        root   /usr/share/nginx/html;
+    }
+
+    error_page   500 502 503 504  /50x.html;
+    location = /50x.html {
+        root   /usr/share/nginx/html;
+    }
+
+    ssl on;
+    ssl_certificate     {{ passenger_nginx_ssl_cert_dir }}/{{ passenger_nginx_ssl_cert_file }};
+    ssl_certificate_key {{ passenger_nginx_ssl_cert_dir }}/{{ passenger_nginx_ssl_key_file }};
+
+    ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
+    ssl_ciphers   'EECDH+AESGCM:EDH+AESGCM:AES256+EECDH:AES256+EDH';
+
+    ssl_prefer_server_ciphers on;
+    ssl_session_cache shared:SSL:10m;
+
+    location / {
+        passenger_enabled on;
+        passenger_ruby    {{ passenger_nginx_passenger_ruby }};
+        passenger_user    {{ passenger_nginx_passenger_user }};
+        passenger_group   {{ passenger_nginx_passenger_group }};
+        root              {{ passenger_nginx_passenger_app_root }};
+    }
+
+    location /roche {
+        alias  /usr/share/nginx/roche;
+    }
+}
+{%- endif %}
